# argus

./: .env.example  .gitignore  AI_DISCLOSURE.md  DEPLOY.md  LICENSE  README.md  docker-compose.yml  nginx.conf
.github/workflows/: cd.yml  ci.yml
demo/: agent.py  pyproject.toml  tools.py
docs/agent-sessions/: 2026-07-07-session.md
docs/superpowers/plans/: 2026-07-07-trajectory-tree-viewer.md
docs/superpowers/specs/: 2026-07-07-trajectory-tree-viewer-design.md
scripts/: seed_demo.sh
