[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argus-demo"
version = "0.1.0"
description = "Argus demo agent — multi-model routing with ratioc SDK instrumentation"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "ratioc",
]

[tool.hatch.build.targets.wheel]
packages = ["demo"]
